# electronic_voting_system

./: .gitignore  Cargo.toml  NOTICE.txt  ProgramID.txt  README.md  payer_keypair.json  vote_state_keypair.json  voter_keypair.json
src/: client.rs  client_v3.rs  lib.rs
